--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -25,7 +25,7 @@
     "build:web":          "vite build --config vite.config.web.ts",
     
     
-    "start:web":          "serve -s dist -l $PORT",
+    "start:web":          "serve -s dist/web -l $PORT",
 
     
     "test":               "vitest run",
