--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -43,8 +43,11 @@
   },
 
   "dependencies": {
-    "monaco-editor":                  "^0.52.2"
-  },
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@tavily/core": "0.3.1",
+    "@computer-use/node-mac-permissions": "2.2.2"
+    },
 
   "devDependencies": {
     "typescript":                     "^5.7.3",
