--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -46,7 +46,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "@tavily/core": "0.3.1",
-    "@computer-use/node-mac-permissions": "2.2.2"
+    "@computer-use/node-mac-permissions": "2.2.2",
+    "react-hot-toast" : "^2.4.0"
     },
 
   "devDependencies": {
