--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -47,7 +47,8 @@
     "react-dom": "^18.0.0",
     "@tavily/core": "0.3.1",
     "@computer-use/node-mac-permissions": "2.2.2",
-    "react-hot-toast" : "^2.4.0"
+    "react-hot-toast" : "^2.4.0",
+    "jotai" : "^2.0.5"
     },
 
   "devDependencies": {
