--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -48,7 +48,8 @@
     "@tavily/core": "0.3.1",
     "@computer-use/node-mac-permissions": "2.2.2",
     "react-hot-toast" : "^2.4.0",
-    "jotai" : "^2.0.5"
+    "jotai" : "^2.0.5",
+    "localforge" : "^1.10.0"
     },
 
   "devDependencies": {
