--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -49,7 +49,7 @@
     "@computer-use/node-mac-permissions": "2.2.2",
     "react-hot-toast" : "^2.4.0",
     "jotai" : "^2.0.5",
-    "localforge" : "^1.10.0"
+    "localforage" : "^1.10.0"
     },
 
   "devDependencies": {
