--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -50,7 +50,8 @@
     "react-hot-toast" : "^2.4.0",
     "jotai" : "^2.0.5",
     "localforage" : "^1.10.0",
-    "@nextui-org/react": "^2.6.11"
+    "@nextui-org/react": "^2.6.11",
+    "classnames" : "^2.3.2"
     },
 
   "devDependencies": {
