--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -52,7 +52,8 @@
     "localforage" : "^1.10.0",
     "@nextui-org/react": "^2.6.11",
     "classnames" : "^2.3.2",
-    "serve" : "^14.0.1"
+    "serve" : "^14.0.1",
+    "react-markdown" : "^10.1.0"
     },
 
   "devDependencies": {
