--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -53,7 +53,8 @@
     "@nextui-org/react": "^2.6.11",
     "classnames" : "^2.3.2",
     "serve" : "^14.0.1",
-    "react-markdown" : "^10.1.0"
+    "react-markdown" : "^10.1.0",
+    "remark-gfm" : "^3.0.1"
     },
 
   "devDependencies": {
