--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -55,7 +55,8 @@
     "serve" : "^14.0.1",
     "react-markdown" : "^10.1.0",
     "remark-gfm" : "^3.0.1",
-    "remark-math" : "^4.0.0"
+    "remark-math" : "^4.0.0",
+    "rehype-katex" : "^6.0.2"
     },
 
   "devDependencies": {
