--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -56,7 +56,8 @@
     "react-markdown" : "^10.1.0",
     "remark-gfm" : "^3.0.1",
     "remark-math" : "^4.0.0",
-    "rehype-katex" : "^6.0.2"
+    "rehype-katex" : "^6.0.2",
+    "react-syntax-highlighter" : "^15.4.5"
     },
 
   "devDependencies": {
