--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -57,7 +57,8 @@
     "remark-gfm" : "^3.0.1",
     "remark-math" : "^4.0.0",
     "rehype-katex" : "^6.0.2",
-    "react-syntax-highlighter" : "^15.4.5"
+    "react-syntax-highlighter" : "^15.4.5",
+    "path-browserify": "^1.0.1"
     },
 
   "devDependencies": {
