--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -58,7 +58,8 @@
     "remark-math" : "^4.0.0",
     "rehype-katex" : "^6.0.2",
     "react-syntax-highlighter" : "^15.4.5",
-    "path-browserify": "^1.0.1"
+    "path-browserify": "^1.0.1",
+    "use-dark-mode" : "^2.3.1"
     },
 
   "devDependencies": {
