--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -9,6 +9,7 @@
   "packageManager": "pnpm@9.12.3",
 
   "scripts": {
+    
     "typecheck:node":     "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web":      "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck":          "npm run typecheck:node && npm run typecheck:web",
@@ -19,15 +20,19 @@
     "build:electron":     "rimraf dist out && npm run typecheck && npm run build:reporter && electron-vite build && electron-forge make",
     "make":               "electron-forge make --platform=linux",
 
-    "dev:web":            "vite --config vite.config.web.ts",
     
-    "build:web":          "NODE_OPTIONS=--max-old-space-size=4096 vite build --config vite.config.web.ts",
+    "dev:web":            "vite --config vite.config.web.ts",
+    "build:web":          "vite build --config vite.config.web.ts",
+    
+    "preview:web":        "PORT=$PORT vite preview --config vite.config.web.ts --host 0.0.0.0",
+    
+    "start:web":          "npm run preview:web",
 
-    "start:web":          "serve -s dist/web -l $PORT",
-
+    
     "test":               "vitest run",
     "test:e2e":           "playwright test",
 
+    
     "build:reporter":     "vite build"
   },
 
@@ -42,72 +47,30 @@
     "tsx":               { "optional": true }
   },
 
+
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@tavily/core": "0.3.1",
-    "@computer-use/node-mac-permissions": "2.2.2",
-    "react-hot-toast" : "^2.4.0",
-    "jotai" : "^2.0.5",
-    "localforage" : "^1.10.0",
-    "@nextui-org/react": "^2.6.11",
-    "classnames" : "^2.3.2",
-    "serve" : "^14.0.1",
-    "react-markdown" : "^10.1.0",
-    "remark-gfm" : "^3.0.1",
-    "remark-math" : "^4.0.0",
-    "rehype-katex" : "^6.0.2",
-    "react-syntax-highlighter" : "^15.4.5",
-    "path-browserify": "^1.0.1",
-    "use-dark-mode" : "^2.3.1",
-    "date-fns" : "^2.30.0"
-    },
+    "@tavily/core":                   "0.3.1",
+    "@computer-use/node-mac-permissions":"2.2.2",
+    "@agent-infra/mcp-server-commands":"workspace:*",
+    "@agent-infra/mcp-server-filesystem":"workspace:*",
+    "@agent-infra/mcp-server-browser": "workspace:*"
+  },
 
   "devDependencies": {
-    "typescript":                     "^5.7.3",
-    "@types/node":                    "^22.13.4",
-    "@types/fs-extra":                "11.0.4",
-
-    "vite":                           "^6.2.2",
-    "@vitejs/plugin-react":           "^4.3.4",
-    "vite-tsconfig-paths":            "^5.1.4",
-    "vite-plugin-monaco-editor":      "^1.1.0",
-
-    "@electron-forge/cli":            "^7.7.0",
-    "@electron-forge/maker-deb":      "^7.7.0",
-    "@electron-forge/maker-dmg":      "^7.7.0",
-    "@electron-forge/maker-rpm":      "^7.7.0",
-    "@electron-forge/maker-squirrel": "^7.7.0",
-    "@electron-forge/maker-zip":      "^7.7.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.7.0",
-    "@electron-forge/plugin-fuses":   "^7.7.0",
-    "@electron-forge/plugin-vite":    "^7.7.0",
-    "@electron-forge/publisher-github": "^7.7.0",
-    "electron-vite":                  "^3.0.0",
-    "electron":                       "34.1.1",
-    "electron-store":                 "^10.0.0",
-    "electron-packager-languages":    "0.6.0",
-    "electron-updater":               "^6.3.9",
-    "@electron-toolkit/preload":      "^3.0.1",
-    "@electron-toolkit/utils":        "^4.0.0",
-
-    "@agent-infra/mcp-server-commands":      "workspace:*",
-    "@agent-infra/mcp-server-filesystem":    "workspace:*",
-    "@agent-infra/mcp-server-browser":       "workspace:*",
-    "@agent-infra/mcp-shared":               "workspace:*",
-    "@agent-infra/shared":                   "workspace:*",
-    "@agent-infra/logger":                   "workspace:*",
-    "@agent-infra/mcp-client":               "workspace:*",
-    "@agent-infra/search":                   "workspace:*",
-    "@ui-tars/electron-ipc":                 "workspace:*",
-    "@common/electron-build":                "workspace:*",
-
-    
     "jsonrepair":                     "3.12.0",
     "serialize-javascript":           "6.0.2",
     "@modelcontextprotocol/sdk":      "^1.11.2",
+    "@electron-toolkit/preload":      "^3.0.1",
+    "@electron-toolkit/utils":        "^4.0.0",
+    "@electron/asar":                 "^3.2.18",
+    "electron-updater":               "^6.3.9",
     "openai":                         "^4.86.2",
     "dotenv":                         "16.4.7",
+    "@agent-infra/mcp-shared":        "workspace:*",
+    "@agent-infra/shared":            "workspace:*",
+    "@agent-infra/logger":            "workspace:*",
+    "@agent-infra/mcp-client":        "workspace:*",
+    "@agent-infra/search":            "workspace:*",
     "ws":                             "8.18.1",
     "utf-8-validate":                 "6.0.5",
     "bufferutil":                     "4.0.9",
@@ -115,16 +78,45 @@
     "@anthropic-ai/sdk":              "0.39.0",
     "@google/generative-ai":          "0.24.0",
     "@mistralai/mistralai":           "1.5.1",
+    "@ui-tars/electron-ipc":          "workspace:*",
+    "@common/electron-build":         "workspace:*",
+    "@electron-forge/cli":            "^7.7.0",
+    "@electron-forge/maker-deb":      "^7.7.0",
+    "@electron-forge/maker-dmg":      "^7.7.0",
+    "@electron-forge/maker-rpm":      "^7.7.0",
+    "@electron-forge/maker-squirrel": "^7.7.0",
+    "@electron-forge/maker-zip":      "^7.7.0",
+    "@electron-forge/plugin-auto-unpack-natives":"^7.7.0",
+    "@electron-forge/plugin-fuses":   "^7.7.0",
+    "@electron-forge/plugin-vite":    "^7.7.0",
+    "@electron-forge/publisher-github":"^7.7.0",
+    "@electron-toolkit/tsconfig":     "^1.0.1",
+    "@types/node":                    "^22.13.4",
+    "@types/fs-extra":                "11.0.4",
+
+    
+    "@vitejs/plugin-react":           "^4.3.4",
+    "vite":                           "^6.1.0",
+    "vite-tsconfig-paths":            "^5.1.4",
+
+    
+    "autoprefixer":                   "10.4.20",
+    "sass":                           "1.85.1",
+    "tailwindcss":                    "^3.3.3",
+  
+
     "@playwright/test":               "^1.49.1",
     "cross-env":                      "^7.0.3",
     "electron-playwright-helpers":    "^1.7.1",
     "rimraf":                         "^6.0.1",
+    "electron":                       "34.1.1",
+    "electron-store":                 "^10.0.0",
+    "electron-packager-languages":    "0.6.0",
+    "electron-vite":                  "^3.0.0",
     "jsdom":                          "^26.0.0",
+    "typescript":                     "^5.7.3",
     "vitest":                         "^3.0.8",
-    "vite-plugin-singlefile":         "2.2.0",
-    "sass":                           "1.85.1",
-    "autoprefixer":                   "10.4.20",
-    "tailwindcss":                    "^3.3.3"
+    "vite-plugin-singlefile":         "2.2.0"
   },
 
   "build": {
@@ -138,9 +130,9 @@
 
   "forge": {
     "makers": [
-      { "name": "@electron-forge/maker-deb",         "config": {} },
-      { "name": "electron-forge-maker-appimage",      "config": {} },
-      { "name": "@electron-forge/maker-zip",          "platforms": ["linux"] }
+      { "name": "@electron-forge/maker-deb",        "config": {} },
+      { "name": "electron-forge-maker-appimage",     "config": {} },
+      { "name": "@electron-forge/maker-zip",         "platforms": ["linux"] }
     ],
     "plugins": [
       ["@electron-forge/plugin-vite", { "configFile": "vite.config.ts" }]
@@ -150,3 +142,5 @@
     ]
   }
 }
+
+
