--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -53,7 +53,10 @@
     "@computer-use/node-mac-permissions":"2.2.2",
     "@agent-infra/mcp-server-commands":"workspace:*",
     "@agent-infra/mcp-server-filesystem":"workspace:*",
-    "@agent-infra/mcp-server-browser": "workspace:*"
+    "@agent-infra/mcp-server-browser": "workspace:*",
+    "helmet" : "^7.0.0",
+    "compression" : "^1.7.4",
+    "morgan" : "1.10.0"
   },
 
   "devDependencies": {
