--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -53,7 +53,9 @@
     "@computer-use/node-mac-permissions":"2.2.2",
     "@agent-infra/mcp-server-commands":"workspace:*",
     "@agent-infra/mcp-server-filesystem":"workspace:*",
-    "@agent-infra/mcp-server-browser": "workspace:*"
+    "@agent-infra/mcp-server-browser": "workspace:*",
+    "openai" : "^4.86.2",
+    "@google/genai": "^0.10.0"
   },
 
   "devDependencies": {
