--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -55,7 +55,8 @@
     "@agent-infra/mcp-server-filesystem":"workspace:*",
     "@agent-infra/mcp-server-browser": "workspace:*",
     "openai" : "^4.86.2",
-    "@google/genai" : "^0.10.0"
+    "@google/genai" : "^0.10.0",
+    "react-hot-toast" : "^2.4.1"
   },
 
   "devDependencies": {
