--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -50,6 +50,8 @@
 
   "dependencies": {
     "@tavily/core":                   "0.3.1",
+    "@google/generative-ai": "^0.15.0",
+    "openai": "^4.52.7", 
     "@computer-use/node-mac-permissions":"2.2.2",
     "@agent-infra/mcp-server-commands":"workspace:*",
     "@agent-infra/mcp-server-filesystem":"workspace:*",
