--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -49,6 +49,7 @@
 
 
   "dependencies": {
+    "react-hot-toast": "^2.5.2",
     "@tavily/core":                   "0.3.1",
     "dotenv":                         "16.4.7",
     "@agent-infra/mcp-server-commands":"workspace:*",
