--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -50,6 +50,7 @@
 
   "dependencies": {
     "react-hot-toast": "^2.5.2",
+    "jotai" : "^2.12.5",
     "@tavily/core":                   "0.3.1",
     "dotenv":                         "16.4.7",
     "@agent-infra/mcp-server-commands":"workspace:*",
