--- a/packages/agent-infra/browser/tsconfig.json
+++ b/packages/agent-infra/browser/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
+    "module": "ESNext",
     "moduleResolution": "node",
     
     "declaration": true,
     "declarationMap": true,
+    "emitDeclarationOnly" : true,
     "sourceMap": true,
 
     "rootdir" : "src",
     "typeRoots": ["node_modules/@types"],
 
-    "outDir": "./dist",
+    "declarationDir": "./dist/types",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
