--- a/packages/agent-infra/browser/tsconfig.json
+++ b/packages/agent-infra/browser/tsconfig.json
@@ -9,7 +9,7 @@
     "emitDeclarationOnly" : true,
     "sourceMap": true,
 
-    "rootdir" : "src",
+    "rootDir" : "src",
     "typeRoots": ["node_modules/@types"],
 
     "declarationDir": "./dist/types",
