--- a/packages/agent-infra/browser/package.json
+++ b/packages/agent-infra/browser/package.json
@@ -17,8 +17,10 @@
   ],
   "scripts": {
     "dev": "rslib build --watch",
-    "build": "rslib build --config tsconfig.build.json",
-    "prepare": "npm run build",
+    "build:code": "rslib build",
+    "build:dts": "tsc --project tsconfig.json --emitDeclarationOnly",
+    "build":"pnpm run build:code && pnpm run build:dts",
+    "prepare": "pnpm run build",
     "prepublishOnly": "pnpm run build",
     "test": "vitest run",
     "test:watch": "vitest",
