chore: rollback to f996cb85

--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -1,6 +1,5 @@
 {
   "name": "agent-tars-app",
-  "type" : "module",
   "private": true,
   "version": "1.0.0-alpha.8",
   "description": "A multimodal AI agent that revolutionizes GUI interaction",
@@ -29,6 +28,7 @@
     
     "start:web":          "node server.mjs",
 
+    
     "test":               "vitest run",
     "test:e2e":           "playwright test",
 
@@ -50,7 +50,7 @@
 
   "dependencies": {
     "@tavily/core":                   "0.3.1",
-    "dotenv":                         "16.4.7",
+    "@computer-use/node-mac-permissions":"2.2.2",
     "@agent-infra/mcp-server-commands":"workspace:*",
     "@agent-infra/mcp-server-filesystem":"workspace:*",
     "@agent-infra/mcp-server-browser": "workspace:*"
@@ -64,6 +64,8 @@
     "@electron-toolkit/utils":        "^4.0.0",
     "@electron/asar":                 "^3.2.18",
     "electron-updater":               "^6.3.9",
+    "openai":                         "^4.86.2",
+    "dotenv":                         "16.4.7",
     "@agent-infra/mcp-shared":        "workspace:*",
     "@agent-infra/shared":            "workspace:*",
     "@agent-infra/logger":            "workspace:*",
@@ -74,6 +76,7 @@
     "bufferutil":                     "4.0.9",
     "fs-extra":                       "11.3.0",
     "@anthropic-ai/sdk":              "0.39.0",
+    "@google/generative-ai":          "0.24.0",
     "@mistralai/mistralai":           "1.5.1",
     "@ui-tars/electron-ipc":          "workspace:*",
     "@common/electron-build":         "workspace:*",
@@ -90,12 +93,18 @@
     "@electron-toolkit/tsconfig":     "^1.0.1",
     "@types/node":                    "^22.13.4",
     "@types/fs-extra":                "11.0.4",
+
+    
     "@vitejs/plugin-react":           "^4.3.4",
     "vite":                           "^6.1.0",
     "vite-tsconfig-paths":            "^5.1.4",
+
+    
     "autoprefixer":                   "10.4.20",
     "sass":                           "1.85.1",
     "tailwindcss":                    "^3.3.3",
+  
+
     "@playwright/test":               "^1.49.1",
     "cross-env":                      "^7.0.3",
     "electron-playwright-helpers":    "^1.7.1",
