--- a/apps/agent-tars/tsconfig.web.json
+++ b/apps/agent-tars/tsconfig.web.json
@@ -12,6 +12,9 @@
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@renderer/*": ["src/renderer/src/*"]
+    }
   }
 }
