--- a/apps/agent-tars/tsconfig.base.json
+++ b/apps/agent-tars/tsconfig.base.json
@@ -7,9 +7,9 @@
       "react-dom": ["./src/renderer/node_modules/@types/react-dom"],
       "@shared/*": ["./src/shared/*"],
       "@main/*": ["./src/main/*"],
-      "@renderer/*": ["./src/renderer/src/*"],
+      "@renderer/*": ["./src/renderer/src/agent/"],
       "@resources/*": ["./resources/*"],
-      "@vendor/chat-ui": ["./src/vendor/chat-ui"]
+      "@vendor/chat-ui": ["./src/vendor/chat-ui/"]
     }
   }
 }
