--- a/apps/agent-tars/tsconfig.base.json
+++ b/apps/agent-tars/tsconfig.base.json
@@ -9,7 +9,7 @@
       "@main/*": ["./src/main/*"],
       "@renderer/*": ["./src/renderer/src/*"],
       "@resources/*": ["./resources/*"],
-      "@vendor/chat-ui": ["./src/vendor/chat-ui/*"]
+      "@vendor/chat-ui": ["./src/vendor/chat-ui"]
     }
   }
 }
