--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,11 @@
 LLM_USE_GEMINI=false
 
 # LLM モデル名（GCP Gemini 用）
-# 例："gemini-advanced"、"gemini-pro"
-LLM_MODEL_GEMINI=gemini-advanced
+LLM_MODEL_GEMINI=gemini-2.0-flash
 
 # LLM モデル名（OpenAI GPT 系）
 # 例：gpt-4o、gpt-4、gpt-3.5-turbo
-LLM_MODEL_GPT=gpt-4o
+LLM_MODEL_GPT=gpt-3.5-turbo
 
 # ──────────────────────────────────────────────
 # 🌐 外部 VLM（HuggingFace など）設定
@@ -32,10 +31,12 @@ VLM_MODEL_NAME=your_model_name
 
 # OpenAI API Key（OpenAI SDK 使う場合）
 # ※ VITE_ プレフィックスをつけるとフロントからも参照可能になります
-VITE_OPENAI_API_KEY=sk-...
+VITE_OPENAI_API_KEY=sk...
 
 # Hugging Face API Key（フロントで直接呼ぶ場合）
 VITE_HF_API_KEY=hf-...
+
+VITE_GEMINI_API_KEY = AIza...
 
 # その他、必要なサービスの認証情報を追記してください
 # EXAMPLE:
