--- a/.env.example
+++ b/.env.example
@@ -47,8 +47,7 @@ VITE_GEMINI_API_KEY = AIza...
 # ──────────────────────────────────────────────
 
 # NODE_ENV (development or production)
-NODE_ENV=development
-
+NODE_ENV=production
 # アプリケーション固有の DB 名称（IndexedDB 等で使う場合）
 # STORAGE_DB_NAME=my_app_db
 
