--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # "true" にすると GEMINI、"false" あるいは未設定で GPT 系を使います
-LLM_USE_GEMINI=false
+VITE_LLM_USE_GEMINI=true
 
 # LLM モデル名（GCP Gemini 用）
-LLM_MODEL_GEMINI=gemini-2.0-flash
+VITE_LLM_MODEL_GEMINI=gemini-2.0-flash
 
 # LLM モデル名（OpenAI GPT 系）
 # 例：gpt-4o、gpt-4、gpt-3.5-turbo
-LLM_MODEL_GPT=gpt-3.5-turbo
+VITE_LLM_MODEL_GPT=gpt-3.5-turbo
 
 # ──────────────────────────────────────────────
 # 🌐 外部 VLM（HuggingFace など）設定
