--- a/.env.example
+++ b/.env.example
@@ -1,55 +1,52 @@
-# "true" にすると GEMINI、"false" あるいは未設定で GPT 系を使います
+# ────────────────────────────────────────
+# LLM モデル切り替え設定（フロントで参照）
+# ────────────────────────────────────────
+
+# "true" にすると Gemini、"false" または未設定で GPT 系（OpenAI）を使います
 VITE_LLM_USE_GEMINI=true
 
-# LLM モデル名（GCP Gemini 用）
+# GCP Gemini 用モデル名
 VITE_LLM_MODEL_GEMINI=gemini-2.0-flash
 
-# LLM モデル名（OpenAI GPT 系）
+# OpenAI GPT 系用モデル名
 # 例：gpt-4o、gpt-4、gpt-3.5-turbo
 VITE_LLM_MODEL_GPT=gpt-3.5-turbo
 
-# ──────────────────────────────────────────────
-# 🌐 外部 VLM（HuggingFace など）設定
-# ──────────────────────────────────────────────
+# ────────────────────────────────────────
+# API キー（フロントで直接呼び出す場合）
+# ────────────────────────────────────────
 
-# VLM プロバイダー名
-# 例：huggingface、anthropic、azure_openai など
-VLM_PROVIDER=huggingface
+# OpenAI API Key
+VITE_OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# VLM エンドポイント URL
-VLM_BASE_URL=http://your_endpoint.aws.endpoints.huggingface.cloud/v1
+# Gemini API Key
+VITE_GEMINI_API_KEY=AIzaSyxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# VLM API キー
-VLM_API_KEY=hf_your_api_key
+# Hugging Face API Key（Spaces 等をフロントで直接叩く場合）
+VITE_HF_API_KEY=hf_xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# VLM 上のモデル名
-VLM_MODEL_NAME=your_model_name
+# ────────────────────────────────────────
+# Node.js サーバー用環境変数
+# ────────────────────────────────────────
 
-# ──────────────────────────────────────────────
-# 🔑 各種 API キー・認証トークン
-# ──────────────────────────────────────────────
+# プロキシサーバー（server.mjs）で使うキー
+GEMINI_API_KEY=${VITE_GEMINI_API_KEY}
 
-# OpenAI API Key（OpenAI SDK 使う場合）
-# ※ VITE_ プレフィックスをつけるとフロントからも参照可能になります
-VITE_OPENAI_API_KEY=sk...
+# （必要なら）Hugging Face ベースURL／プロバイダー
+# VLM_PROVIDER=huggingface
+# VLM_BASE_URL=https://<your-hf-space>.hf.space/api
+# VLM_API_KEY=${VITE_HF_API_KEY}
+# VLM_MODEL_NAME=your_model_name
 
-# Hugging Face API Key（フロントで直接呼ぶ場合）
-VITE_HF_API_KEY=hf-...
-
-VITE_GEMINI_API_KEY =AIza...
-
-# その他、必要なサービスの認証情報を追記してください
-# EXAMPLE:
-# THIRD_PARTY_SERVICE_API_KEY=...
-
-# ──────────────────────────────────────────────
-# 🛠 その他環境設定
-# ──────────────────────────────────────────────
+# ────────────────────────────────────────
+# その他
+# ────────────────────────────────────────
 
 # NODE_ENV (development or production)
 NODE_ENV=production
-# アプリケーション固有の DB 名称（IndexedDB 等で使う場合）
-# STORAGE_DB_NAME=my_app_db
 
-# PORT（ローカル開発サーバーの起動ポート）
+# IndexedDB などで使うストレージ名
+STORAGE_DB_NAME=agent_tars_db
+
+# ローカル開発サーバーのポート
 PORT=3000
