--- a/.github/workflows/release-ui-tars.yml
+++ b/.github/workflows/release-ui-tars.yml
@@ -1,5 +1,4 @@
 # .github/workflows/release-ui-tars.yml
-
 name: Release UI-TARS app
 
 on:
@@ -7,202 +6,29 @@ on:
     branches:
       - main
 
-env:
-  CI: true
-  NODE_OPTIONS: --max-old-space-size=8192
-  HUSKY: 0
-
-permissions:
-  id-token: write
-  contents: write
-  attestations: write
-
 jobs:
-  publish_on_mac:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
-      - name: Show operating system info
-        run: |
-          echo "Operating System:"
-          uname -a
-      - name: Install pnpm
-        run: npm install -g pnpm@9
-      - uses: actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: Install Python setuptools
-        run: brew install python-setuptools
-      - name: Install appdmg
-        run: npm install -g appdmg
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD:                  ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
-          KEYCHAIN_PASSWORD:             ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-          echo -n "$BUILD_CERTIFICATE_BASE64"         | base64 --decode -o $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64"   | base64 --decode -o $PP_PATH
-
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-
-      - name: install dependencies
-        run: pnpm install
-
-      - name: publish arm64
-        env:
-          APPLE_ID:       ${{ secrets.APPLE_ID }}
-          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          APPLE_TEAM_ID:  ${{ secrets.APPLE_TEAM_ID }}
-          KEYCHAIN_PATH:  $RUNNER_TEMP/app-signing.keychain-db
-          GITHUB_TOKEN:   ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          cd apps/ui-tars && pnpm run publish:mac-arm64
-
-      - name: Save latest-mac-arm64.yml as an artifact
-        uses: actions/upload-artifact@6027e3dd177782cd8ab9af838c04fd81a07f1d47
-        with:
-          name: latest-mac-${{ github.sha }}-arm64
-          path: apps/ui-tars/out/latest-mac-arm64.yml
-          if-no-files-found: error
-
-  publish_on_mac_x64:
-    runs-on: macos-13
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
-      - name: Show operating system info
-        run: |
-          echo "Operating System:"
-          uname -a
-      - name: Install pnpm
-        run: npm install -g pnpm@9
-      - uses: actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: Install Python setuptools
-        run: brew install python-setuptools
-      - name: Install appdmg
-        run: npm install -g appdmg
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD:                  ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
-          KEYCHAIN_PASSWORD:             ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-          echo -n "$BUILD_CERTIFICATE_BASE64"         | base64 --decode -o $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64"   | base64 --decode -o $PP_PATH
-
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-
-      - name: install dependencies
-        run: pnpm install
-
-      - name: publish x64
-        env:
-          APPLE_ID:       ${{ secrets.APPLE_ID }}
-          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          APPLE_TEAM_ID:  ${{ secrets.APPLE_TEAM_ID }}
-          KEYCHAIN_PATH:  $RUNNER_TEMP/app-signing.keychain-db
-          GITHUB_TOKEN:   ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          cd apps/ui-tars && pnpm run publish:mac-x64
-
-      - name: Save latest-mac-x64.yml as an artifact
-        uses: actions/upload-artifact@6027e3dd177782cd8ab9af838c04fd81a07f1d47
-        with:
-          name: latest-mac-${{ github.sha }}-x64
-          path: apps/ui-tars/out/latest-mac-x64.yml
-          if-no-files-found: error
-
-  merge-latest-mac:
-    needs:
-      - publish_on_mac
-      - publish_on_mac_x64
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
-      - name: Show operating system info
-        run: |
-          echo "Operating System:"
-          uname -a
-      - name: Install pnpm
-        run: npm install -g pnpm@9
-      - uses: actions/setup-node@1d0ff46901bbe5b1630ceea73d27597364c9af683
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: install dependencies
-        run: pnpm i tsx js-yaml -w
-      - name: Download All Artifacts
-        uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e
-        with:
-          path: scripts/merge-yml
-          pattern: latest-mac-${{ github.sha }}-*
-          merge-multiple: true
-      - name: merge mac-yaml
-        id: merge_yaml
-        run: |
-          npx tsx ./scripts/merge-yml/merge-yml.ts
-          cat ./scripts/merge-yml/latest-mac.yml
-          echo "releaseName=$(grep version scripts/merge-yml/latest-mac.yml | cut -d' ' -f2)" >> $GITHUB_OUTPUT
-      - name: Upload to Release
-        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631
-        with:
-          fail_on_unmatched_files: true
-          tag_name: v${{ steps.merge_yaml.outputs.releaseName }}
-          files: scripts/merge-yml/latest-mac.yml
-
-  publish_on_win:
+  publish_windows:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
-      - name: Show operating system info
+      # 1) ソースコードをチェックアウト
+      - uses: actions/checkout@v4
+
+      # 2) pnpm のインストール＋依存解決
+      - name: Install pnpm and dependencies
         run: |
-          echo "Operating System:"
-          cmd /c ver
-      - name: Install pnpm
-        run: npm install -g pnpm@9
-      - uses: actions/setup-node@1d0ff46901bbe5b1630ceea73d27597364c9af683
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: install dependencies
-        run: pnpm install
-      - name: publish
+          npm install -g pnpm@9
+          pnpm install
+
+      # 3) Windows 向けビルド＆ GitHub Releases へアップロード
+      - name: Build & Publish Windows
+        shell: bash
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          cd apps/ui-tars && pnpm run publish:win32
+          cd apps/ui-tars
+          pnpm run publish:win32
+
+      # 4) Render の Deploy Hook を叩いてネイティブデプロイ
       - name: Trigger deploy on Render
         run: |
           echo "🌐 Triggering Render deploy via webhook"
