ワークフローファイルを最新の状態にする

--- a/.github/workflows/release-ui-tars.yml
+++ b/.github/workflows/release-ui-tars.yml
@@ -1,4 +1,3 @@
-# .github/workflows/release-ui-tars.yml
 name: Release UI-TARS app
 
 on:
@@ -10,25 +9,25 @@ jobs:
   publish_windows:
     runs-on: windows-latest
     steps:
-      # 1) ソースコードをチェックアウト
+      # 1) ソースをチェックアウト
       - uses: actions/checkout@v4
 
-      # 2) pnpm のインストール＋依存解決
+      # 2) pnpm をインストールして依存解決
       - name: Install pnpm and dependencies
         run: |
           npm install -g pnpm@9
           pnpm install
 
-      # 3) Windows 向けビルド＆ GitHub Releases へアップロード
+      # 3) Windows 向けビルド＆GitHub Releases へアップロード
       - name: Build & Publish Windows
         shell: bash
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}   # ← ここ重要
         run: |
           cd apps/ui-tars
           pnpm run publish:win32
 
-      # 4) Render の Deploy Hook を叩いてネイティブデプロイ
+      # 4) Render に自動デプロイをトリガー
       - name: Trigger deploy on Render
         run: |
           echo "🌐 Triggering Render deploy via webhook"
